fix missing close icon; only show vertical scroll bar when actually overflowing #1133

--- a/app/assets/stylesheets/directory/base.css.scss
+++ b/app/assets/stylesheets/directory/base.css.scss
@@ -185,8 +185,9 @@ p {
 #alerts-container ul.dropdown-menu {
   padding-left:8px;
   width: 325px;
-  overflow-y: scroll;
-  max-height: 500px;
+  overflow: hidden;
+  overflow-y: auto;
+  max-height: 200px;
 }
 
 .number-circle {
